Added Product entity as master, added product page

--- a/src/EasiPosStock.Domain.Shared/Localization/EasiPosStock/en.json
+++ b/src/EasiPosStock.Domain.Shared/Localization/EasiPosStock/en.json
@@ -64,6 +64,7 @@
     "ProductName": "Product Name",
     "ProductCode": "Product Code",
     "Products": "Products",
-    "NewProduct": "New Product"
+    "NewProduct": "New Product",
+    "Menu:Products": "Products"
   }
 }
